<resources>
    <string name="app_name">Poosh It</string>
    <string name="email">rob@robbomb.com</string>
    <string name="slogan">Poosh it real good.</string>

    <string name="action_start_over">New Target</string>
    <string name="action_about">About Poosh It</string>
    <string name="action_stats">My Statistics</string>


    <string name="reps">Reps</string>
    <string name="met_goal">Met Goal</string>
    <string name="under_goal">Under Goal</string>
    <string name="missed">Missed</string>
    <string name="log_a_set">Log A Set</string>
    <string name="you_have_done">You have done</string>
    <string name="reps_today">reps today</string>
    <string name="you_still_need">You still need</string>
    <string name="more_today">more</string>
    <string name="total_done">Total</string>
    <string name="todays_target">Today\'s Target</string>
    <string name="remaining">Remaining</string>

    <string name="first_time_desc">Pick a target number of reps for your exercise for today, <b>DAY ONE</b>.\n\nEach day you will have to do <b>one more</b> than the previous day. Keep POOSHing!</string>

    <string name="about_desc">Milo of Croton (c. 6th-century BC) was alleged to have achieved his legendary strength by lifting a newborn calf and every day repeating the task until it was as large as a bull. Why? Because there wasn\'t a whole lot to do in the 6th-century.\n\nEmbrace his legend and Poosh yourself with progressive resistance training!\n\nMilo reportedly died when he tried to tear a tree apart, became trapped, and was devoured by wolves.</string>
    <string name="action_help">Help</string>
    <string name="Cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="first_time">first_time</string>
    <string name="help_choose_workout">Think of an Exercise</string>
    <string name="help_workout_desc">Push-ups, sit-ups, crunches, pull-ups, whatever you want!</string>
    <string name="help_target">Pick your Day-One Target</string>
    <string name="help_target_desc">In the next window, select the number of reps you want to start with today. Each day you will have to do just <i>one more</i>.</string>
    <string name="help_change">Change Your Target Anytime</string>
    <string name="help_change_desc">Swipe the menu at the left to change your target or start over with a new workout.</string>
    <string name="poosh_progressive_resistance">Poosh It - Progressive Resistance</string>
    <string name="email_year">2016 - rob@robbomb.com</string>
    <string name="target_needed_msg">Please use the navigation drawer at the left to choose a new target before logging your workouts.</string>
    <string name="target_needed_title">New Target Needed!</string>
    <string name="about_dialog_title">About Poosh It</string>
    <string name="about_dialog_okay">Uhh, thanks?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="help_dialog_title">Welcome to Poosh It</string>
    <string name="help_dialog_okay">Got It!</string>
    <string name="clear_dialog_message">Are you sure you want to clear all data and start over?</string>
    <string name="clear_dialog_title">Wipe Data</string>
    <string name="action_change_target">Change Target</string>


</resources>

