<?xml version="1.0" encoding="utf-8"?><!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:id="@+id/drawer_layout"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:fitsSystemWindows="true"--><!--tools:openDrawer="start">-->

<!--<include--><!--layout="@layout/app_bar_main"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent" />-->

<!--&lt;!&ndash;<android.support.design.widget.NavigationView&ndash;&gt;--><!--&lt;!&ndash;android:id="@+id/nav_view"&ndash;&gt;--><!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;--><!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;--><!--&lt;!&ndash;android:layout_gravity="start"&ndash;&gt;--><!--&lt;!&ndash;android:fitsSystemWindows="true"&ndash;&gt;--><!--&lt;!&ndash;app:headerLayout="@layout/nav_header_main"&ndash;&gt;--><!--&lt;!&ndash;app:menu="@menu/activity_main_drawer" />&ndash;&gt;-->

<!--</android.support.v4.widget.DrawerLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/summaryLayout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.robbomb.pushupper.SummaryActivity">


    <LinearLayout
        android:id="@+id/cal_parent"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:alpha=".85"
        android:layout_margin="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:id="@+id/cal_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/cal_legend_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/status_met"
            android:minWidth="100dp"
            android:text="@string/met_goal"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/status_under"
            android:minWidth="100dp"
            android:text="@string/under_goal"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/status_missed"
            android:minWidth="100dp"
            android:text="@string/missed"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="3dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/total_done"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/stat_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/todays_target"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stat_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/remaining"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/stat_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="3dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_log_set"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"

        android:drawableStart="@android:drawable/ic_menu_add"
        android:drawableLeft="@android:drawable/ic_menu_add"

        android:text="@string/log_a_set"
        android:layout_marginTop="5dp"
        android:layout_weight="5"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" />
</LinearLayout><!--</ScrollView>-->